Cambios en erratas y añadidas algunas referencias

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -93,10 +93,9 @@
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\bibliographystyle{agsm}
-\bibliography{references}
-% \addtocontents{toc}{\bigskip}
-\addcontentsline{toc}{part}{Bibliography}
+\import{tex/}{bibliography.tex}
+%%\bibliographystyle{plain}
+%%\bibliography{references}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
