--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -17,8 +17,8 @@
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{booktabs}
-\usepackage{natbib}
 \usepackage{xcolor}
+\usepackage{hyperref}
 \usepackage[spanish, es-tabla]{babel}
 
 %\usepackage{helvet}
