--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -299,7 +299,7 @@ De manera natural, para objetos autosimilares los conceptos de dimensión fracta
 Por último estudiaremos un concepto de dimensión aplicable a espacios topológicos. La \textbf{dimensión topológica} se define inductivamente de la siguiente forma:
 
 \begin{enumerate}
-\item La dimensión del conjunto vacío es $\partial(\emptyset):=-1$.
+\item La dimensión del conjunto vacío es $\dim(\emptyset):=-1$.
 \item Un espacio topológico $X$ tiene dimensión 0 ($\dim(X)=0$) si para cualquier $x\in V$ con $V$ abierto en $X$ existe un abierto $U$ cuya frontera $\partial(U)$ es vacía y se verifica que $x\in U\subseteq V$.
 
 \item Un espacio topológico $X$ tiene dimensión menor o igual que $n$ ($\dim(X)\leq n$) si para cualquier $x\in X$ y cualquier $V$ abierto que contiene a $x$ existe un abierto $U$ tal que $\dim(\partial(U))\leq n-1$ y se verifica que $x\in U\subseteq V$. 
