Añadimos algunas referencias (#26)

--- a/memoria/references.bib
+++ b/memoria/references.bib
@@ -22,3 +22,13 @@ publisher = {Freeman},
 title = {The Fractal geometry of nature },
 year = {1983},
 }
+
+@article{Hausdorff1919,
+author = {Hausdorff, F.},
+journal = {Mathematische Annalen},
+pages = {157-179},
+title = {Dimension und äußeres Maß},
+url = {http://eudml.org/doc/158784},
+volume = {79},
+year = {1919},
+}
