--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -1,10 +1,8 @@
 \begin{thebibliography}{99}
     
 \bibitem{alma991013963162704990} Edgar. (2008). \textit{Measure, Topology, and Fractal Geometry} (2nd ed. 2008.). Springer New York. \url{https://doi.org/10.1007/978-0-387-74749-1}
-
 \bibitem{alma991007242979704990} Mandelbrot. (1983). \textit{The Fractal geometry of nature}. Freeman.
-
-\bibitem{alma991007022459704990} Falconer. (1990). \textit{Fractal geometry : mathematical foundations and applications}. John Wiley.
-
+\bibitem{alma991007022459704990} Falconer. (1990). \textit{Fractal geometry: mathematical foundations and applications}. John Wiley.
+\bibitem{Hausdorff1919} Hausdorff, F.. \textit{Dimension und ausseres Mass.} Mathematische Annalen 79 (1919): 157-179. \url{http://eudml.org/doc/158784}.
 
 \end{thebibliography}
