--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -30,6 +30,8 @@
 \newtheorem{definicion}{Definición}[section]
 \newtheorem{observacion}{Observación}[section]
 \newtheorem{ejemplo}{Ejemplo}[section]
+\newtheorem{proposicion}{Proposición}[section]
+\newtheorem{lema}{Lema}[section]
 
 \newcommand{\diam}[0]{\mathrm{diam}}
 
