Añadido nombre alternativo a la dimensión autosimilar (#4)

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -199,11 +199,11 @@ De manera análoga al segmento, el cuadrado y el cubo podemos tomar cualquier fi
 \begin{definicion}[Dimensión autosimilar]
 Dado un subconjunto $X$ de $\R^n$ que se puede dividir en $N(k)$ subconjuntos congruentes entre sí y cada uno de ellos imagen por una homotecia de razón $r=\frac 1 k$ de $X$, definimos su \textbf{dimensión autosimilar} como el único valor $d$ que satisface la identidad $\frac{N(k)}{k^d}=1$, es decir: 
 $$
-d=\frac{\log N(k)}{\log(k)}
+\dim_A(A)=\frac{\log N(k)}{\log(k)}
 $$
 \end{definicion}
 
-Sin embargo, antes de utilizar este concepto debemos comprobar que la definición es coherente con cualquier partición y cualquier factor de escala. Es decir, que independientemente de la división del objeto que se tome la dimensión va a ser la misma.
+También se puede ver definida como \textit{dimensión de homotecia}. Sin embargo, antes de utilizar este concepto debemos comprobar que la definición es coherente con cualquier partición y cualquier factor de escala. Es decir, que independientemente de la división del objeto que se tome la dimensión va a ser la misma.
 
 \begin{lema}
 Sean $k_1 < k_2$ dos números naturales y un subconjunto $X$ de $\R^n$ autosimilar y que se puede dividir en $N(k_1)$ (resp. $N(k_2)$) subconjuntos congruentes entre sí y cada uno de ellos imagen por una homotecia de razón $\frac {1}{k_1}$ (resp. $\frac {1}{k_2}$). Entonces tanto $N(k_1)$ como $N(k_2)$ son potencias de un mismo número natural $N$ y tanto $\frac{1}{k_1}$ como $\frac{1}{k_2}$ son potencias de una misma razón $\frac 1 k$.
@@ -247,7 +247,7 @@ Por su parte, la curva de Koch se compone de 4 copias de sí misma, cada una a e
 El concepto de dimensión fractal autosimilar tiene el defecto de que está limitado únicamente a objetos totalmente autosimilares, pero la mayoría de objetos no cumple esta propiedad. Para solucionar este problema, introduciremos un nuevo concepto de dimensión. Previamente definimos un término necesario en las futuras definiciones.
 
 \begin{definicion}
-Dado un subconjunto $U$ de $\R^n$, definimos su \textit{diámetro} como:
+Dado un subconjunto $U$ de $\R^n$, definimos su \textbf{diámetro} como:
 $$
 \diam(U)=\sup \left\lbrace d(x,y): x,y\in U\right\rbrace 
 $$
