Añadida relación entre las distintas dimensiones (#4)

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -4,5 +4,7 @@
 \bibitem{alma991007242979704990} Mandelbrot. (1983). \textit{The Fractal geometry of nature}. Freeman.
 \bibitem{alma991007022459704990} Falconer. (1990). \textit{Fractal geometry: mathematical foundations and applications}. John Wiley.
 \bibitem{Hausdorff1919} Hausdorff, F.. \textit{Dimension und ausseres Mass.} Mathematische Annalen 79 (1919): 157-179. \url{http://eudml.org/doc/158784}.
+\bibitem{Hurewicz-Wallman}Hurewicz, Witold; Wallman, Henry (1948). \textit{Dimension Theory}. Princeton University Press.
+\bibitem{Moran}Moran, P. A. (1946). \textit{Additive functions of intervals and Hausdorff measure}. In \textit{Mathematical Proceedings of the Cambridge Philosophical Society} (Vol. 42, No. 1, pp. 15-23). Cambridge University Press.
 
 \end{thebibliography}
